--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --base-href 'https://aragrevo.github.io/shopping-cart/'",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
